# mpiflow

./: README.md
gemm/: CMakeLists.txt  gemm-mpi.cc  gemm.cc
lcs/: CMakeLists.txt  lcs-omp.cc
lcs/data/: ex96k.60k.in  ex96k.60k.out
mem/: CMakeLists.txt  memrw.cc
pio/: CMakeLists.txt  pread.c  pwrite.c
tools/: prepare.sh
